# genial

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
client/: package.json  tsconfig.json
client/config/: webpack.config.js  webpackDevServer.config.js
client/e2e/: fullGame.mjs
client/public/: index.html
client/src/: App.tsx  Genial.css  GenialUi.tsx  api.ts  consts.ts  eventSource.ts  global.ts  index.tsx  log.ts  onWebSocketMessage.ts  selectors.ts  serverTypes.d.ts  types.ts  utils.ts
client/src/components/: Board.tsx  CreateGameForm.css  CreateGameForm.tsx  DesktopLayout.tsx  GameStartForm.tsx  Hexy.tsx  LobbyGameList.css  LobbyGameList.tsx  PlayerHexyPairList.tsx  PlayerRegistrationForm.tsx  Progress.tsx  SystemMessage.tsx  index.ts
client/src/components/lobbyGame/: LobbyGame.css  LobbyGame.tsx
client/src/components/navigation/: Navigation.tsx
client/src/tests/: integration.test.ts  selectors.test.ts  utils.test.ts
client/src/translations/: en.ts
client/src/types/: server.ts
e2e/: fullGame.mjs
misc/: commands.txt
prisma/: .env.example  package.json  tsconfig.json  tsconfig.tsbuildinfo  types.ts
prisma/prisma/: index.ts  schema.prisma  servak.ts
prisma/prisma/migrations/20230115151506_init/: migration.sql
prisma/prisma/migrations/20230116170655_game_status/: migration.sql
public/: manifest.json
server/: .env  .env.example  Cargo.toml  README.md  package.json  schema.sql  tsconfig.json
server/prisma/: schema.prisma
server/prisma/migrations/20230305134346_/: migration.sql
server/prisma/migrations/20230310125919_/: migration.sql
server/src/: broadcast.rs  claude_ws.rs  drawHexyPair.ts  game.rs  genialGlobal.ts  index.ts  main.rs  old.rs  trash.rs  types.rs  types.ts  util.rs  utils.ts  validators.ts  ws.rs  ws_actions.rs  ws_handler.rs  ws_main.rs  ws_server.rs
server/src/_prisma/: schema.prisma
server/src/_prisma/migrations/20230311160157_game_admin_uuid/: migration.sql
server/src/api/: consts.ts  createGame.ts  drawHexyPair.ts  index.ts  joinGame.ts  leaveGame.ts  listGames.ts  pingPong.ts  placeHexy.ts  startGame.ts  subscribePlayer.ts  typesForClient.ts
server/src/queries/: gamePost.ts  games.ts
server/src/routes/: game.rs  lobby.rs  mod.rs
server/src/ws/: game.rs  lobby.rs  rooms_state.rs
src/: Genial.css  GenialUi.tsx  api.ts  consts.ts  genial.ts  global.ts  index.tsx  log.ts  selectors.ts  types.ts  utils.ts
src/components/: Board.tsx  CreateGameForm.css  CreateGameForm.tsx  Footer.tsx  Hexy.tsx  PlayerHexyPairList.tsx  Progress.tsx  RadioSelect.css  RadioSelect.tsx  index.ts
src/tests/: GenialUi.test.ts  integration.test.ts  selectors.test.ts  utils.test.ts
src/translations/: en.ts
(+10 files in other folders)
