[package]
name = "genial-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-web-lab = "0.20.1"
parking_lot = "0.12.1"
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
env = "0.0.0"
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features=["postgres", "runtime-tokio", "uuid"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.197" }
actix-cors = "0.7.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
tokio = { version = "1.24.2", features = ["sync", "io-util"] }
tokio-stream = "0.1.1"

[lints.rust]
non_snake_case = { level = "allow" }
unused_imports = { level = "allow" }
